# nbstudy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/nb_study_tools/: __about__.py  cli.py
src/nbstudy/: __about__.py
src/nbstudy/cache/: __init__.py
src/nbstudy/cli/: __init__.py
src/nbstudy/cli/commands/: cache.py  github.py
src/nbstudy/settings/: __init__.py  settings.py
src/nbstudy/workspace/: __init__.py  workspace.py
tests/: test_dummy.py
