[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nb-study-tools"
dynamic = ["version"]
description = 'Tools for studying notebooks'
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "Dylan Lukes", email = "lukes.dylan@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "requests"
]

[project.urls]
Documentation = "https://github.com/DylanLukes/nb-study-tools#readme"
Issues = "https://github.com/DylanLukes/nb-study-tools/issues"
Source = "https://github.com/DylanLukes/nb-study-tools"

[tool.hatch.version]
path = "src/nb_study_tools/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/nb_study_tools tests}"

[tool.coverage.run]
source_pkgs = ["nb_study_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/nb_study_tools/__about__.py",
]

[tool.coverage.paths]
nb_study_tools = ["src/nb_study_tools", "*/nb-study-tools/src/nb_study_tools"]
tests = ["tests", "*/nb-study-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
