[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbstudy"
dynamic = ["version"]
description = 'Tools for studying notebooks'
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "Dylan Lukes", email = "lukes.dylan@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "requests"
]

[project.urls]
Documentation = "https://github.com/DylanLukes/nbstudy#readme"
Issues = "https://github.com/DylanLukes/nbstudy/issues"
Source = "https://github.com/DylanLukes/nbstudy"

[project.scripts]
nbstudy = "nbstudy.cli:cli"

[tool.hatch.version]
path = "src/nbstudy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/nbstudy tests}"

[tool.coverage.run]
source_pkgs = ["nbstudy", "tests"]
branch = true
parallel = true
omit = [
  "src/nbstudy/__about__.py",
]

[tool.coverage.paths]
nbstudy = ["src/nbstudy", "*/nbstudy/src/nbstudy"]
tests = ["tests", "*/nbstudy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
